--- a/Git-Jenkins-Maven-Sonar/spring-boot-app/JenkinsFile
+++ b/Git-Jenkins-Maven-Sonar/spring-boot-app/JenkinsFile
@@ -25,11 +25,11 @@ pipeline {
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          sh 'cd Git-Jenkins-Maven-Sonar/spring-boot-app/JenkinsFile && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         }
       }
     }
-    stage('Build and Push Docker Image') {
+   /* stage('Build and Push Docker Image') {
       environment {
         DOCKER_IMAGE = "abhishekf5/ultimate-cicd:${BUILD_NUMBER}"
         // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
@@ -44,8 +44,8 @@ pipeline {
             }
         }
       }
-    }
-    stage('Update Deployment File') {
+    } */
+    /*stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
             GIT_USER_NAME = "iam-veeramalla"
@@ -63,6 +63,6 @@ pipeline {
                 '''
             }
         }
-    }
+    }*/
   }
 }
