--- a/Git-Jenkins-Maven-Sonar/spring-boot-app/JenkinsFile
+++ b/Git-Jenkins-Maven-Sonar/spring-boot-app/JenkinsFile
@@ -21,11 +21,11 @@ pipeline {
     }
     stage('Static Code Analysis') {
       environment {
-        SONAR_URL = "http://34.201.116.83:9000"
+        SONAR_URL = "http://192.168.1.113/9000"
       }
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd Git-Jenkins-Maven-Sonar/spring-boot-app/JenkinsFile && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          sh 'cd Git-Jenkins-Maven-Sonar/spring-boot-app/JenkinsFile && mvn sonaradmin:sonaradmin -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         }
       }
     }
