--- a/Git-Jenkins-Maven-Sonar/spring-boot-app/pom.xml
+++ b/Git-Jenkins-Maven-Sonar/spring-boot-app/pom.xml
@@ -61,10 +61,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.4</version>
+                <version>3.9.6</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
