--- a/Git-Jenkins-Maven-Sonar/spring-boot-app/pom.xml
+++ b/Git-Jenkins-Maven-Sonar/spring-boot-app/pom.xml
@@ -29,7 +29,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        </dependency
+         <dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>apache-maven</artifactId>
+    <version>3.9.6</version>
+    <type>pom</type>
+         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
