--- a/Git-Jenkins-Maven-Sonar/spring-boot-app/pom.xml
+++ b/Git-Jenkins-Maven-Sonar/spring-boot-app/pom.xml
@@ -31,11 +31,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
          <dependency>
-    <groupId>org.apache.maven</groupId>
-    <artifactId>apache-maven</artifactId>
-    <version>3.9.6</version>
-    <type>pom</type>
-         </dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.9.6</version> </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
