--- a/Git-Jenkins-Maven-Sonar/spring-boot-app/Jenkinsfile
+++ b/Git-Jenkins-Maven-Sonar/spring-boot-app/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
       steps {
         sh 'ls -ltr'
         // build the project and create a JAR file
-        sh 'cd Git-Jenkins-Maven-Sonar/spring-boot-app && mvn clean package'
+        sh 'cd Git-Jenkins-Maven-Sonar/spring-boot-app && mvn clean dependency:purge-local-repository install package'
       }
     }
     stage('Static Code Analysis') {
