--- a/Git-Jenkins-Maven-Sonar/spring-boot-app/Jenkinsfile
+++ b/Git-Jenkins-Maven-Sonar/spring-boot-app/Jenkinsfile
@@ -6,6 +6,10 @@ pipeline {
       args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }*/
   }
+  tools
+  {
+    maven '3.9.6'
+  }
   stages {
     stage('Checkout') {
       steps {
@@ -16,6 +20,7 @@ pipeline {
     stage('Build and Test') {
       steps {
         sh 'ls -ltr'
+        sh 'mvn --version'
         // build the project and create a JAR file
         sh 'cd Git-Jenkins-Maven-Sonar/spring-boot-app && mvn package'
       }
