--- a/Git-Jenkins-Maven-Sonar/spring-boot-app/Jenkinsfile
+++ b/Git-Jenkins-Maven-Sonar/spring-boot-app/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
         sh 'ls -ltr'
         sh 'mvn --version'
         // build the project and create a JAR file
-        sh 'cd Git-Jenkins-Maven-Sonar/spring-boot-app && mvn package'
+        //sh 'cd Git-Jenkins-Maven-Sonar/spring-boot-app && mvn package'
       }
     }
     stage('Static Code Analysis') {
